# PAD_LBP_PS-Bildverarbeitung-WS25

./: .gitignore  README.md  pyproject.toml
notebooks/: Graphs.ipynb  IDIAP_lbp-default.csv  IDIAP_lbp-default.pkl  IDIAP_lbp-nri_uniform.csv  IDIAP_lbp-nri_uniform.pkl  IDIAP_lbp-ror.csv  IDIAP_lbp-ror.pkl  IDIAP_lbp-uniform.csv  IDIAP_lbp-uniform.pkl  IDIAP_lbp-var.csv  IDIAP_lbp-var.pkl  LBP.ipynb  PLUS_lbp-default.pkl  PLUS_lbp-nri_uniform.pkl  PLUS_lbp-ror.pkl  PLUS_lbp-uniform.pkl  PLUS_lbp-var.pkl  Pipeline.ipynb  SCUT_lbp-default.pkl  SCUT_lbp-nri_uniform.pkl  SCUT_lbp-ror.pkl  SCUT_lbp-uniform.pkl  SCUT_lbp-var.pkl  Untitled.ipynb  different_metrics.ipynb  fingerprint_dataset.py
src/: run.py
src/fingerprint/data/: IDIAP.py  PLUS.py  SCUT.py
